# sx

./: .gitignore  plan.md  test_proc.rs
examples/mini-daytona-rs/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  README.md  build-artifact.sh  run_e2e.js  run_e2e.sh  start-docker.sh  start-local.sh  test.js  test_client.rs  test_profile.sb
examples/mini-daytona-rs/.cargo/: config.toml
examples/mini-daytona-rs/doc/: README.md  api.md  architecture.md  build-system.md  modules.md  networking.md  security.md
examples/mini-daytona-rs/images/data-analysis/: Dockerfile
examples/mini-daytona-rs/images/nextjs/: Dockerfile
examples/mini-daytona-rs/images/nginx/: Dockerfile
examples/mini-daytona-rs/images/puppeteer/: Dockerfile
examples/mini-daytona-rs/images/python/: Dockerfile
examples/mini-daytona-rs/images/vue3-vite/: Dockerfile
examples/mini-daytona-rs/src/: main.rs  metadata.rs  netns.rs  overlay.rs  sandbox.rs  server.rs  snapshot.rs
examples/mini-daytona-rs/src/os/linux/: build.rs  mod.rs  netns.rs  overlay.rs  sandbox.rs  seccomp_whitelist.rs  server.rs
examples/mini-daytona-rs/src/os/macos/: build.rs  mod.rs  netns.rs  overlay.rs  sandbox.rs  server.rs
examples/mini-daytona-rs/test/: Dockerfile.test  platform.js  run_e2e.js  run_llm_e2e.js  run_puppeteer_e2e.js  run_vite_e2e.js
examples/mini-daytona-rs/test/files/: build-vite-project.sh  verify-vite-server.js
examples/mini-daytona-rs/web/: admin.html
moulin/: .gitignore  Cargo.toml  Dockerfile  README.md  build-artifact.sh  start-docker.sh  start-local.sh  test_profile.sb
moulin/doc/: README.md  api.md  architecture.md  build-system.md  modules.md  networking.md  security.md
moulin/src/: main.rs  metadata.rs  netns.rs  overlay.rs  sandbox.rs  server.rs  snapshot.rs
moulin/test/: platform.js  (+2 more)
(+20 files in other folders)
