[package]
name = "mini-daytona-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.29", features = ["sched", "mount", "fs", "process", "signal", "mman", "hostname", "net"] }
tar = "0.4"
flate2 = "1.0"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
clap = { version = "4.0", features = ["derive"] }
fs_extra = "1.3"
chrono = "0.4"

# Production ready dependencies
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "net"] }
