[package]
name = "mini-daytona-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tar = "0.4"
flate2 = "1.0"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
md5 = "0.7"
clap = { version = "4.0", features = ["derive"] }
fs_extra = "1.3"
chrono = "0.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "net", "process", "io-util"] }
libc = "0.2"
base64 = "0.22"
tokio-stream = "0.1.18"
futures-util = "0.3.32"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["sched", "mount", "fs", "process", "signal", "mman", "hostname", "net", "user"] }
caps = "0.5.5"
libseccomp = "0.3.0"
